kubernetes/sbtech-slack-invite/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbtech-slack-invite
  labels:
    app: sbtech-slack-invite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sbtech-slack-invite
  template:
    metadata:
      labels:
        app: sbtech-slack-invite
    spec:
      containers:
      - name: sbtech-slack-invite
        image: outsideris/slack-invite-automation
        ports:
        - containerPort: 3000
