kubernetes/sbtech-slack-invite/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbtech-slack-invite
  labels:
    app: sbtech-slack-invite
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: sbtech-slack-invite
